--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* line 17, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,91 +20,117 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+/* line 22, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
+/* line 24, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
+/* line 26, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
+/* line 28, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
+/* line 30, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
+/* line 103, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
+/* line 32, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
+/* line 116, C:/Program Files (x86)/Prepros/ruby/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
 
 /* Use border-box */
+/* line 6, style.sass */
 * {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 10, style.sass */
 body {
   background-color: lightblue;
   margin: 0;
 }
 
+/* line 13, style.sass */
 .navbar {
   text-align: center;
 }
+/* line 15, style.sass */
 .navbar li {
   display: inline-block;
   margin: 0 2em;
 }
 
+/* line 18, style.sass */
 .site-title {
   text-align: center;
   font-size: 3em;
+  font-family: sans-serif;
   background-color: #66cccc;
   color: white;
 }
 
+/* line 25, style.sass */
 .section-title {
   text-align: center;
 }
 
+/* line 27, style.sass */
 .professors {
   background-color: white;
 }
+/* line 29, style.sass */
 .professors .professor-list {
   text-align: center;
 }
+/* line 31, style.sass */
 .professors .professor {
   display: inline-block;
   text-align: center;
   margin: 0 1em;
 }
+/* line 35, style.sass */
 .professors .professor .professor-image {
   width: 2em;
   height: 2em;
 }
 
+/* line 38, style.sass */
+.articles {
+  margin: 0 2em;
+}
+
+/* line 40, style.sass */
 .article {
   display: block;
 }
 
+/* line 43, style.sass */
 footer {
   text-align: center;
 }
