--- a/css/style.sass
+++ b/css/style.sass
@@ -17,7 +17,9 @@ body
     margin: 0 2em
 .site-title
   text-align: center
-  font-size: 3em
+  font:
+    size: 3em
+    family: sans-serif
   background-color: #66cccc
   color: white
 .section-title
@@ -33,6 +35,8 @@ body
     .professor-image
       width: 2em
       height: 2em
+.articles
+  margin: 0 2em
 .article
   display: block
   
