Add anchor link

--- a/index.slim
+++ b/index.slim
@@ -14,11 +14,11 @@ html
         nav
           ul [class="navbar" role="navigation"]
             li
-              a [href=""] Professors
+              a [href="#professors"] Professors
             li
-              a [href=""] Articles
+              a [href="#articles"] Articles
             li
-              a [href=""] Activities
+              a [href="#activities"] Activities
       .headline
         img [class="headline-image" src=""]
         h2 [class="headline-title"]
@@ -26,7 +26,7 @@ html
       section [class="professors"]
         h2 [class="section-title"] Professors
         ul [class="professor-list"]
-          li [class="professor"]
+          li [id="professor" class="content-block"]
             img [class="professor-image" src=""]
             h2 [class="professor-name"] Aye
             p [class="professor-intro"] Aye is a good professor
@@ -38,7 +38,7 @@ html
             img [class="professor-image" src=""]
             h2 [class="professor-name"] Chi
             p [class="professor-intro"] Chi is a good professor
-      section [class="articles"]
+      section [id="articles" class="content-block"]
         h2 [class="section-title"] Articles
         ul [class="article-list"]
           li [class="article"]
@@ -53,7 +53,7 @@ html
             img [class="article-cover" src=""]
             h3 [class="article-title"] Catastrophe
             p [class="article-sum"] Catastrophe is a disaster
-      section [class="activities"]
+      section [id="activities" class="content-block"]
         h2 [class="section-title"] Activities
         ul [class="activities-list"]
           li [class="activity"]
