--- a/poster/style.sass
+++ b/poster/style.sass
@@ -1,12 +1,18 @@
 @import "compass/reset"
+@import "compass/css3"
 
 @font-face
   font-family: TianYanKai
   src: url(./TianYanKai.ttf)
   font-weight: 400
 
+.en
+  font
+    family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+    weight: 300
+
 .poster-title
-  float: right
+  align-self: right
   .title-text
     text:
       align: right
@@ -20,7 +26,26 @@
       size: 8em
       family: 'Tangerine', serif
   .cn
-    vertical-align: true
     font:
       family: TianYanKai, sans-serif
     letter-spacing: 0.2em
+.slogan
+  align-self: left
+  margin:
+    top: 5em
+    left: 3em
+  .slogan-text
+    font-size: 3em
+  .en
+    font:
+      size: 5em
+      family: 'Tangerine', serif
+  .cn
+    font:
+      family: TianYanKai, sans-serif
+    letter-spacing: 0.2em
+.description
+  margin:
+    left: 3em
+    top: 10em
+  width: 50%
