--- a/css/style.sass
+++ b/css/style.sass
@@ -3,7 +3,9 @@
 @import "compass/reset"
 
 /* Variables */
-$bodybgc: #eeeeee
+$bodybgc: #ffffff
+$ttc: #ffffff
+$hdbgc: #99eeff
 
 /* Use border-box */
 *
@@ -14,63 +16,31 @@ $bodybgc: #eeeeee
 body
   background-color: $bodybgc
   margin: 0
-  color: #333
+  color: #ffffff
+  text-shadow: #000 1px 1px 1px
   font-family: Helvetica, Verdana, Arial, sans-serif
 
 /* Head Banner */
 header
-  margin: 0
-  height: 8em
-  background-color: lightblue
+  background-color: $hdbgc
+  height: 30em
+  padding: 2em 3em
 .site-logo
-  width: 50%
-  margin: 1em 0em 1em 2em
+  height: 10em
+  /* logo img */
   background-image: url("../img/Transparency-Logo.png")
-  background-size: 5em
-.navbar
-  float: right
-  width: auto
-  margin-right: 1.2em
-  li
-    display: inline-block
-    padding: 0.5em 0.5em
-    background-color: #ffaa00
-    a
-      text-decoration: none
+  background-repeat: no-repeat
+  background-size: contain
+
+/* Title Style */
 .site-title
-  float: left
-  width: auto
-  margin: 1em 0 0 0.2em
-  text-align: left
-  font:
-    size: 2.5em
-    family: sans-serif
-section
-  max-width: 960px
-  width: 80%
-  margin: 2em auto
-.section-title
-  text-align: left
-  color: #cc00cc
-  font-size: 1.5em
-  margin-left: 0.5em
-.professors
-  background-color: white
-  .professor-list
-    text-align: center
-  .professor
-    display: inline-block
-    text-align: center
-    margin: 0 1em
-    .professor-image
-      width: 2em
-      height: 2em
-.articles
-  margin: 2em
-.article
-  display: block
-  
-footer
-  text-align: center
-  font-size: 0.8em
-  color: #aaaaaa
+  margin-left: 5em
+  font-size: 2em
+  color: $ttc
+  text-shadow: #000 1px 1px 2px
+
+/* Email Form */
+.emfield
+  float: right
+  text-align: right
+  font-size: 1.2em
